ReportCommandAPI/k8s/report-c-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-command-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1(/|$)(.*)
        pathType: Prefix
        backend:
          service:  
            name: report-command-api-service
            port:
              number: 80
